@@ -4,6 +4,10 @@ Flusspferd Change Log
 Release 0.8
 -----------
 
+2009-10-17:
+- '--interactive' flag to the REPL will now enter interactive mode evan after
+  call to quit() or an exception is thrown
+
 2009-10-10:
 - A largely complete implementation of CommonJS 'filesystem-base' module
   (http://wiki.commonjs.org/wiki/Filesystem/A/0). This is only a proposal, so
